highlights imgs distortion fixed by object-fit cover

--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@
     width: 100%;
     box-shadow: 2px 4px 8px rgb(68, 67, 67);
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .destination strong {
